# p2_AC_2021_22

./: .gitignore  CMakeLists.txt  README.md
src/lab-openmp/: .gitignore
src/lab-openmp/hello/: expar.cpp
src/lab-openmp/pi/: CMakeLists.txt  pispar1.cpp  pispar2.cpp  pispar3.cpp  pispar4.cpp
src/p1/: CMakeLists.txt  aos.cpp  soa.cpp
src/p1/Parsing/: Parsing.cpp
src/p1/Point/: Point.cpp  Point.hpp
src/p1/Simulators/: AosSimulator.cpp  Simulator.hpp  SoaSimulator.cpp
src/p1/SpaceVector/: SpaceVector.cpp
src/p2/: CMakeLists.txt  paos.cpp  psoa.cpp  test_paos.cpp  test_psoa.cpp
src/p2/Parsing/: Parsing.cpp
src/p2/Point/: Point.cpp  Point.hpp
src/p2/Simulators/: AosSimulator.cpp  Simulator.hpp  SoaSimulator.cpp
src/p2/SpaceVector/: SpaceVector.cpp
src/p2/merge/: mergesort.cpp
src/test/: CMakeLists.txt  s_test_aos.cpp  s_test_paos.cpp  s_test_psoa.cpp  s_test_soa.cpp  test_aos.cpp  test_paos.cpp  test_psoa.cpp  test_soa.cpp
